--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-
+<!DOCTYPE html> 
+<html>
+ 
+   <head> 
+      <title>CSD112- Trinity Simon </title> 
+   </head>
+ 
+   <body> 
+      <p style = "italic;">im am italic </p>  
+   
+     <p style = "color:green;font-syle bold;">This is bold </p> 
+     
+     
+     <style>
+  .italic {
+    font-style:italic;
+  }
+</style>
+<div class="italic">
+  <p>This is italic using embedded CSS.</p>
+</div>
+     <span style=”font-weight:bold;”> bold text</span> 
+  
+  </body>
+ 
+</html> 
