--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  
    <head> 
-      <title>CSD112- Trinity Simon </title> 
+      <title>"CSD112- Trinity Simon"</title> 
    </head>
  
    <body> 
