--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <p>This is italic using embedded CSS.</p>
 </div>
      <span style=”font-weight:bold;”> bold text</span> 
-  
-  </body>
- 
+  <p class="thicker">This is bold .</p>
+<p class="italic">This is a paragraph in italic style.</p>
+ </body>
 </html> 
