--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
- 
-   <head> 
-      <title>"CSD112- Trinity Simon"</title> 
-   </head>
- 
-   <body> 
-      <p style = "italic;">im am italic </p>  
-   
-     <p style = "color:green;font-syle bold;">This is bold </p> 
-     
-     
-     <style>
-  .italic {
-    font-style:italic;
-  }
-</style>
-<div class="italic">
-  <p>This is italic using embedded CSS.</p>
-</div>
-     <span style=”font-weight:bold;”> bold text</span> 
-  <p class="thicker">This is bold .</p>
-<p class="italic">This is a paragraph in italic style.</p>
- </body>
-</html> 
+  <head>
+    <title Trinity in CSSS</title>
+  </head>
+  <body>
+    <p style = "Color#009900; font-size:50px;
+    font-style: italic; text-align centre; font weight; bold">
+     This is trinitys inline in CSS </p>
+  </body>
+</html>
