--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title Trinity in CSSS</title>
-  </head>
-  <body>
-    <p style = "Color#009900; font-size:50px;
-    font-style: italic; text-align centre; font weight; bold">
-     This is trinitys inline in CSS </p>
-  </body>
+<body style="background-color:black;">
+
+<h1 style="color:white;padding:30px;">Hello</h1>
+<p style="color:white;font-weight:bold;font-style:italic"Trinity Website</p>
+
+</body>
 </html>
