--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <body style="background-color:black;">
 
-<h1 style="color:white;padding:30px;">Hello</h1>
-<p style="color:white;font-weight:bold;font-style:italic"Trinity Website</p>
-
+<p> font-style  : italic
+  font-weight : bold "inline CSS" </P>
 </body>
 </html>
