--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:black;">
-
-<p> font-style  : italic
-  font-weight : bold "inline CSS" </P>
+<head>
+<title>Inline CSS</title>
+<h1>Trinity CSS Inline Style</h1>
+</head>
+<body>
+<p style="color:blue; font-size:50px; font-style: italic;">This is test for Inline CSS</p>
 </body>
 </html>
