--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <h1>Trinity CSS Inline Style</h1>
 </head>
 <body>
-<p style="color:blue; font-size:50px; font-style: italic-bold;">This is test for Inline CSS</p>
+<p style="color:blue; 
+          font-size:50px; 
+          font-style: italic;
+          font-weight: bold;">This is test for Inline CSS</p>
 </body>
 </html>
