--- a/index.html
+++ b/index.html
@@ -5,6 +5,22 @@
            font-style: italic;
            font-weight: bold;">
    hello this is inline css </p>
+  <style>
+.main {
+    text-align:center;
+}
+.new {
+font-style:italic;
+font-weight:bold;
+}
+</style>
+</head>
+<body>
+    <div class="main">
+        <div class = "new">Embedded CSS </div>
+    </div>
+  
+  
  
           
           
