--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@ font-style:italic;
 font-weight:bold;
 }
 </style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
+<h1>Hello World!!</h1>
+<p>How are you?</p>
+</body>
+</html>
+Footer
+© 2022 GitHub, Inc.
+  
+  <body>
     <div class="main">
         <div class = "new">Embedded CSS </div>
     </div>
