--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@ font-weight:bold;
 </head>
 <body>
 <h1>Hello World!!</h1>
-<p>How are you?</p>
+<p>This is external CSS</p>
 </body>
 </html>
 Footer
-© 2022 GitHub, Inc.
+
   
   <body>
     <div class="main">
