--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <html>
-<body>
+<body background= "Pug.jpeg"
   <p style="background-color: white; 
            font-style: italic;
            font-weight: bold;">
