--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE>
 <html>
-<body background= "Pug.jpeg"
+<body>
   <p style="background-color: white; 
            font-style: italic;
            font-weight: bold;">
    hello this is inline css </p>
   <style>
-.main {
+.body {
+  background-image: url("Pug.jpg")
+    }
+    .main {
     text-align:center;
 }
 .new {
@@ -24,6 +27,7 @@ font-weight:bold;
 <body>
  <div class="main">
  <div class = "new">Embedded CSS </div>
- </div>
+   <div class = "body"> pug image added </div> 
+  </div>
  </body>
  </html>
