--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    hello this is inline css </p>
   <style>
 .body {
-  background-image: url("Pug.jpg")
+  background-image:"Pug.jpg"
     }
     .main {
     text-align:center;
