--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE>
 <html>
-<body>
+<body background="https://img1.thepetowners.com/89/2016/1019/3f/5/002360/original.jpg">
   <p style="background-color: white; 
            font-style: italic;
            font-weight: bold;">
    hello this is inline css </p>
   <style>
-.body {
-  background-image:"Pug.jpg"
+
+ ]
     }
     .main {
     text-align:center;
@@ -27,7 +27,7 @@ font-weight:bold;
 <body>
  <div class="main">
  <div class = "new">Embedded CSS </div>
-   <div class = "body"> pug image added </div> 
+   
   </div>
  </body>
  </html>
