--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <html>
-<body background="https://img1.thepetowners.com/89/2016/1019/3f/5/002360/original.jpg">
+<body background="https://st3.depositphotos.com/6751976/13674/v/950/depositphotos_136743946-stock-illustration-cartoon-cute-funny-vector-pug.jpg">
   <p style="background-color: white; 
            font-style: italic;
            font-weight: bold;">
