--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE>
 <html>
-<body background="https://st3.depositphotos.com/6751976/13674/v/950/depositphotos_136743946-stock-illustration-cartoon-cute-funny-vector-pug.jpg">
+<body background="https://res.cloudinary.com/teepublic/image/private/s--ozKsTurI--/t_Preview/t_watermark_lock/b_rgb:ffffff,c_limit,f_jpg,h_630,q_90,w_630/v1562397108/production/designs/5248364_0.jpg">
   <p style="background-color: white; 
            font-style: italic;
            font-weight: bold;">
