--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE>
 <html>
-<body background="https://clipartcraft.com/images/puppy-clipart-pug-10.png">
+<body>
   <p style="background-color: white; 
            font-style: italic;
            font-weight: bold;">
    hello this is inline css </p>
   <style>
-
+body {
+  background-image: url("pug3.png")
+    background-repeat: no-repeat;
+  background-position: left;
+  margin-left:200px; }
  ]
     }
     .main {
