--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
-<body>
+<header>
+  <body>
   <p style="background-color: white; 
            font-style: italic;
            font-weight: bold;">
@@ -20,7 +21,9 @@ body {
 font-style:italic;
 font-weight:bold;
 }
-</style>
+<a href= https://www.nhl.com/mapleleafs/>
+                        <img src="Logo.png" alt="Maple leafs logo" width="75">
+    </style>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -29,11 +32,14 @@ font-weight:bold;
 
  
   </body>
+  
 </html>
 <body>
  <div class="main">
  <div class = "new">Embedded CSS </div>
    
   </div>
+ 
  </body>
+  </header>
  </html>
