--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 body {
   background-image: url("pug3.png")
     background-repeat: no-repeat;
-  background-position: left;
+  float: left;
+  background-size: 100% 100%;
   margin-left:200px; }
  ]
     }
