--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
            font-weight: bold;">
    hello this is inline css </p>
   <style>
-body {
+.body {
   background-image: url("pug4.png")
     background-repeat: no-repeat;
   float: left;
