--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@ font-weight:bold;
   <body>
  <div class="main">
  <div class = "new">Embedded CSS </div>
-   
-  </div>
+   <div class = "body">pug</div>
+ 
+    </div>
  <a href= https://www.nhl.com/mapleleafs/>
                         <img src="Logo.png" alt="Maple leafs logo" width="75">
  </body>
