--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    hello this is inline css </p>
   <style>
 .body {
-  background-image: url("pug4.png")
+  background-image: url("https://webstockreview.net/images/dog-clipart-pug-15.png")
     background-repeat: no-repeat;
   float: left;
   background-size: 100% 100%;
