--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
            font-weight: bold;">
    hello this is inline css </p>
   <style>
-.body {
+.pug {
   background-image: url("https://webstockreview.net/images/dog-clipart-pug-15.png")
     background-repeat: no-repeat;
   float: left;
-  background-size: 100% 100%;
+  background-size: cover;
+  padding-top:100px
   margin-left:200px; }
  ]
     }
@@ -38,7 +39,7 @@ font-weight:bold;
   <body>
  <div class="main">
  <div class = "new">Embedded CSS </div>
-   <div class = "body">pug</div>
+   <div class = "pug">pug</div>
  
     </div>
  <a href= https://www.nhl.com/mapleleafs/>
