--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ font-weight:bold;
   <body>
  <div class="main">
  <div class = "new">Embedded CSS </div>
-   <div class = "pug">pug</div>
+   <div class = "pug">hi</div>
  
     </div>
  <a href= https://www.nhl.com/mapleleafs/>
