--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    hello this is inline css </p>
   <style>
 .pug {
-  background-image: url("https://webstockreview.net/images/dog-clipart-pug-15.png")
+  background-image: url("pug4.png")
     background-repeat: no-repeat;
   float: left;
   background-size: cover;
@@ -39,7 +39,7 @@ font-weight:bold;
   <body>
  <div class="main">
  <div class = "new">Embedded CSS </div>
-   <div class = "pug">hi</div>
+   <div class = "pug"></div>
  
     </div>
  <a href= https://www.nhl.com/mapleleafs/>
