--- a/index.html
+++ b/index.html
@@ -8,6 +8,35 @@
            font-weight: bold;">
    hello this is inline css </p>
   <style>
+    h1 {
+      color:#009;
+        font-size:1em;
+        margin-bottom: .3em;
+        text-alighn: centre;
+      text-decoration: underline;
+    }
+    table {
+      margin: .3em;
+      width: 290px;
+    }
+    th {
+      padding: .2em;
+    }
+    td {
+      background-color:#ffc;
+      birder: 1px solid #900;
+      padding-left: .5em;
+      padding-right: .5em;
+    }
+    #trHeader {
+      color: #900;
+      text-decoration: underline;
+    }
+    .centerCell {
+      text-align: center;
+    }
+    
+      
 .pug {
   background-image: url("pug4.png")
     background-repeat: no-repeat;
@@ -40,7 +69,29 @@ font-weight:bold;
  <div class="main">
  <div class = "new">Embedded CSS </div>
    <div class = "pug"></div>
- 
+ <table>
+   <tr id= "trHeader">
+     <th> Name <th>
+     <th> phone number <th>
+   </tr>
+   <tr> 
+     <td> John Doe <td>
+     <td class= "centerCell"> 7056781234 </td>
+   </tr>
+    <tr> 
+     <td> barry  <td>
+     <td class= "centerCell"> 7056781234 </td>
+   </tr>
+    <tr> 
+     <td> hocus pocus <td>
+     <td class= "centerCell"> 7056781234 </td>
+   </tr>
+    <tr> 
+     <td> Jane Doe <td>
+     <td class= "centerCell"> 7056781234 </td>
+   </tr>
+   </table>
+   
     </div>
  <a href= https://www.nhl.com/mapleleafs/>
                         <img src="Logo.png" alt="Maple leafs logo" width="75">
