--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ font-weight:bold;
  <table>
    <tr id= "trHeader">
      <th> Name <th>
-     <th> phone number <th>
+     <th> Phone Number <th>
    </tr>
    <tr> 
      <td> John Doe <td>
