--- a/index.html
+++ b/index.html
@@ -35,15 +35,13 @@
     .centerCell {
       text-align: center;
     }
-    
-      
-.pug {
-  background-image: url("pug4.png")
-    background-repeat: no-repeat;
+    div {
+      background-image: url("pug4.png");
+      background-repeat: no-repeat;
   float: left;
   background-size: cover;
   padding-top:100px
-  margin-left:200px; }
+    margin-left:200px;
  
     }
     .main {
