--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       text-align: center;
     }
     div {
-      background-image: url("pug4.png");
+      background-image: url("bc.jpg");
       background-repeat: no-repeat;
   float: left;
   background-size: cover;
