--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ font-weight:bold;
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Hello World!!</h1>
+<h1> CSD112 - Trinity Simon </h1>
 <p>This is external CSS</p>
 
 
@@ -68,7 +68,7 @@ font-weight:bold;
   <body>
  <div class="main">
  <div class = "new">Embedded CSS </div>
-   <div class = "pug"></div>
+  
  <table>
    <tr id= "trHeader">
      <th> Name <th>
